# pysystemc

./: .gitignore  .gitmodules  Makefile  Makefile-helper.mk  README.md  pyproject.toml
examples/: run_sysc_cpp.py
examples/counter/cpp/: counter.h  counter_tb.cpp
examples/counter/py/: counter.py  counter_tb.py
examples/helloworld/cpp/: helloworld.cpp
examples/helloworld/py/: helloworld.py
examples/helloworld/python/: helloworld.py
examples/simple_fifo/py/: simple_fifo.py
src/amal/eda/systemc/: __init__.py
src/amal/eda/systemc/sc_core/: __init__.py  sc_main.cpp  sc_module_new.cpp
src/amal/eda/systemc/sc_dt/: __init__.py
