[project]
name = "systemc"
version = "0.1.0"
description = "SystemC Python Binding using cppyy"
readme = "README.md"
authors = [
    { name = "Amal Khailtash", email = "amal.khailtash@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "cppyy>=3.1.2",
]

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["src/amal"]
# namespaces = true

# [project.scripts]
# pysystemc = "amal.eda.systemc:main"

[tool.hatch.build.targets.sdist]
# include = []
exclude = [
    ".uv_cache/",
    "*.vcd",
    "submodules/*",
    "test-*",
    "Makefile-local",
    "main.py",
    "main_window.py",
    "modules.py",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amal"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
